Import of TIEDEMANN/uplug-main-0.3.4 from CPAN.
gitpan-cpan-distribution: uplug-main
gitpan-cpan-version:      0.3.4
gitpan-cpan-path:         TIEDEMANN/uplug-main-0.3.4.tar.gz
gitpan-cpan-author:       TIEDEMANN
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,7 @@
 ---
 abstract: 'a toolbox for processing (parallel) text corpora'
+author:
+  - 'Joerg Tiedemann'
 build_requires:
   ExtUtils::MakeMaker: 6.36
 configure_requires:
@@ -25,4 +27,4 @@ requires:
   perl: 5.005
 resources:
   license: http://opensource.org/licenses/gpl-license.php
-version: 0.3.3
+version: 0.3.4
