--- a/META.yml
+++ b/META.yml
@@ -21,10 +21,29 @@ no_index:
     - share
     - t
 requires:
+  AnyDBM_File: 0
+  Cwd: 0
+  Data::Dumper: 0
+  Encode: 0
+  Exporter: 0
+  File::Basename: 0
+  File::Compare: 0
+  File::Copy: 0
   File::ShareDir: 0
+  File::stat: 0
+  FileHandle: 0
+  FindBin: 0
+  Getopt::Std: 0
+  HTML::Entities: 0
+  IO: 0
+  IO::File: 0
+  POSIX: 0
+  Storable: 0
+  Sys::Hostname: 0
+  Test::More: 0
   XML::Parser: 0
   XML::Simple: 0
   perl: 5.005
 resources:
   license: http://opensource.org/licenses/gpl-license.php
-version: 0.3.4
+version: 0.3.5
