--- a/META.yml
+++ b/META.yml
@@ -39,6 +39,7 @@ requires:
   HTML::Entities: 0
   IO: 0
   IO::File: 0
+  IPC::Run: 0
   POSIX: 0
   Storable: 0
   Sys::Hostname: 0
@@ -48,4 +49,4 @@ requires:
   perl: 5.005
 resources:
   license: http://opensource.org/licenses/gpl-license.php
-version: 0.3.7
+version: 0.3.8
